# git-secret-vault

./: Cargo.toml  README.md  dist-workspace.toml  git-secret-vault.code-workspace  tsconfig.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: exit-codes.md  format-spec.md  homebrew-tap.md  mcp-server.md  reproducible-build.md
packaging/homebrew/: git-secret-vault.rb
scripts/: manual-keyring-smoke.sh  manual-sandbox-shell.sh  manual-sandbox.sh  manual-test-sandbox.sh  mock-keyring.sh  run-with-keyring.sh  update-homebrew-formula.py
scripts/spec-ledger/: README.md  allocate-req-id.ts  common.ts  constants.ts  generate-req-index.ts  validate-architecture-docs.ts  validate-claims.ts  validate-req-files.ts  validate-req-index.ts  validate-req-trace-coverage.ts  validate-trace-events.ts  validate-trace-evidence.ts  validate-trace-immutability.ts  validate-worktree-fresh.ts
spec/: AGENT.md  REQ.md  TRACE.md  requirement-specification-20260301.md
spec/ARCHITECTURE/: ARD-0001-system-context.md  README.md  current-infrastructure.md
spec/DECISIONS/: ADR-0001-template.md  ADR-0002-git-secret-vault-safety-and-compatibility.md  ADR-0002-safezipvault-safety-and-compatibility.md  ADR-0003-dual-profile-vault-architecture.md  README.md
spec/requirements/: FR-001.md  FR-002.md  FR-003.md  FR-004.md  FR-005.md  FR-006.md  FR-007.md  FR-008.md  FR-009.md  FR-010.md  FR-011.md  FR-012.md  FR-013.md  FR-014.md  FR-015.md  FR-016.md  FR-017.md  FR-018.md  (+48 more)
src/: config.rs  error.rs  keyring_mock.rs  lib.rs  main.rs
tests/: corruption.rs  crypto_properties.rs  golden_path.rs  merge_behavior.rs  security.rs
(+253 files in other folders)
