[package]
name = "git-secret-vault"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
hex = "0.4"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", features = ["aes-crypto"] }
zeroize = { version = "1", features = ["derive"] }
