[package]
name = "git-secret-vault"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
repository = "https://github.com/aheissenberger/git-secret-vault"
description = "Encrypted secret vault stored in git using AES-256 ZIP archives"
homepage = "https://github.com/aheissenberger/git-secret-vault"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
hex = "0.4"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", features = ["aes-crypto"] }
keyring = "3"
zeroize = { version = "1", features = ["derive"] }
glob = "0.3"
rmcp = { version = "0.17.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
